@@ -222,7 +222,7 @@ public class HttpServer
             HttpConfiguration httpsConfiguration = new HttpConfiguration(baseHttpConfiguration);
             httpsConfiguration.addCustomizer(new SecureRequestCustomizer());
 
-            this.sslContextFactory = Optional.of(this.sslContextFactory.orElseGet(() -> createReloadingSslContextFactory(config, clientCertificate)));
+            this.sslContextFactory = Optional.of(this.sslContextFactory.orElseGet(() -> createReloadingSslContextFactory(config, clientCertificate, nodeInfo.getEnvironment())));
             SslConnectionFactory sslConnectionFactory = new SslConnectionFactory(sslContextFactory.get(), "http/1.1");
 
             Integer acceptors = config.getHttpsAcceptorThreads();
@@ -266,7 +266,7 @@ public class HttpServer
             if (config.isHttpsEnabled()) {
                 adminConfiguration.addCustomizer(new SecureRequestCustomizer());
 
-                this.sslContextFactory = Optional.of(this.sslContextFactory.orElseGet(() -> createReloadingSslContextFactory(config, clientCertificate)));
+                this.sslContextFactory = Optional.of(this.sslContextFactory.orElseGet(() -> createReloadingSslContextFactory(config, clientCertificate, nodeInfo.getEnvironment())));
                 SslConnectionFactory sslConnectionFactory = new SslConnectionFactory(sslContextFactory.get(), "http/1.1");
                 adminConnector = createServerConnector(
                         httpServerInfo.getAdminChannel(),
@@ -523,13 +523,13 @@ public class HttpServer
         server.join();
     }
 
-    private SslContextFactory.Server createReloadingSslContextFactory(HttpServerConfig config, ClientCertificate clientCertificate)
+    private SslContextFactory.Server createReloadingSslContextFactory(HttpServerConfig config, ClientCertificate clientCertificate, String environment)
     {
         if (scheduledExecutorService == null) {
             scheduledExecutorService = newSingleThreadScheduledExecutor(daemonThreadsNamed("HttpServerScheduler"));
         }
 
-        return new ReloadableSslContextFactoryProvider(config, scheduledExecutorService, clientCertificate).getSslContextFactory();
+        return new ReloadableSslContextFactoryProvider(config, scheduledExecutorService, clientCertificate, environment).getSslContextFactory();
     }
 
     private static ServerConnector createServerConnector(
